--- a/tsconfig.json
+++ b/tsconfig.json
@@ -117,6 +117,6 @@
     "include": [
         "resources/js/**/*.ts",
         "resources/js/**/*.d.ts",
-        "resources/js/**/*.tsx",
+        "resources/js/**/*.tsx", "../laravel12fullecompractice/resources/js/pages/Ecommerce/Cart.tsx",
     ]
 }
