--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-dropzone": "^14.3.8",
+        "react-to-print": "^3.1.0",
         "swiper": "^11.2.8",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
